# django-blog

./: README.md
backend/: .env.example  __init__.py  pyproject.toml
backend/core/: settings.py  urls.py
backend/src/: urls.py
backend/src/accounts/: apps.py  urls.py
backend/src/accounts/admin/: __init__.py  user.py
backend/src/accounts/backends/: __init__.py  email_and_password.py  username_and_password.py
backend/src/accounts/forms/: __init__.py
backend/src/accounts/forms/account/: __init__.py  change_password.py  change_username.py
backend/src/accounts/forms/auth/: __init__.py  change_password.py  change_username.py  reset_password.py  sign_in.py  sign_up.py
backend/src/accounts/mixins/: logout_required.py
backend/src/accounts/models/: user.py
backend/src/accounts/templates/accounts/account/: settings.html
backend/src/accounts/templates/accounts/auth/: reset-password.html  sign-in.html  sign-up.html
backend/src/accounts/validators/: __init__.py  user.py
backend/src/accounts/views/: __init__.py
backend/src/accounts/views/account/: __init__.py  change_password.py  change_username.py  settings.py
backend/src/accounts/views/auth/: __init__.py  reset_password.py  sign_in.py  sign_out.py  sign_up.py
